# mpf-mc

./: .coveragerc  .gitignore  .landscape.yml  .prospector.yaml  .travis.yml  AUTHORS  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  get_version.py  mc.py  pyproject.toml  setup.py  setup_with_build.py  test.py  version.py
.github/workflows/: build_wheels.yml
.old_install_files/: setup.py
build_scripts/: README.md  calculate_mpf_branch.py  distutils.cfg  mac-build.sh  rename_wheels.py  set_build_env_vars.py  set_deploy.bat  set_env.bat  windows-build.bat  windows-install-developer-mode.bat  windows-test-wheel.bat
docker/debian-jessie/: Dockerfile
docker/ubuntu1404/: Dockerfile
docker/ubuntu1604/: Dockerfile
examples/demo/config/: config.yaml
examples/demo/mc_scriptlets/: demo_driver.py
examples/demo/scriptlets/: demo_driver.py
mc/: dmd_test.py  fbo.py  mcconfig.yaml
mc/assets/: image.py  sound.py  video.py
mc/core/: assets.py  bcp_processor.py  bcp_server.py  config_player.py  config_processor.py  keyboard.py  kivy_config_processor.py  mc.py  mode.py  mode_controller.py  screen_player.py  slide_player.py  sound.py  utils.py  widget_player.py
mc/core/audio/: .gitignore  __init__.py  audio_interface.pxi  audio_interface.pyx  setup.py  sound_player.py
mc/core/pinaudio/: .gitignore  README.rst  setup.py
mc/tests/: test_Animation.py  test_Audio.py  test_Dmd.py  test_Modes.py  test_Video.py
mc/transitions/: move_in.py  move_out.py  push.py
mc/uix/: display.py  screen.py  screen_manager.py  slide.py  slide_frame.py  transitions.py  widget.py  window.py
mc/widgets/: bezier.py  dmd.py  ellipse.py  image.py  line.py  point.py  quad.py  rectangle.py  text.py  triangle.py  video.py
mpf/mc/: __init__.py  _version.py  mcconfig.yaml
mpf/mc/assets/: image.py
mpf/mc/core/: bcp_processor.py  bcp_server.py  config_processor.py  mc.py  mode.py  mode_controller.py  utils.py  widget_player.py
mpf/mc/tests/: MpfMcTestCase.py  README.md  _test_Template.py  test_AnimatedImages.py  test_Assets.py  test_AudioBadBufferSetting.py  test_AudioDefaultSettings.py  test_AudioDisabled.py  test_BcpProcessor.py  test_Color.py  test_ColorDmd.py  test_DisplayMultiple.py  test_DisplayNone.py  test_DisplaySingle.py  test_Keyboard.py  test_Shapes.py  test_SlideFrame.py  test_SlidePlayer.py  test_Slides.py  test_TextStyles.py  test_Transitions.py  test_Utils.py  test_Widget.py
mpf/mc/transitions/: move_in.py  move_out.py  push.py
mpf/mc/uix/: display.py  slide_frame.py  transitions.py  widget.py
mpf/mc/widgets/: bezier.py  dmd.py  ellipse.py  image.py  line.py  point.py  quad.py  rectangle.py  video.py
mpfmc/: _version.py  mcconfig.yaml
mpfmc/assets/: bitmap_font.py  image.py  mc_asset.py  playlist.py  sound.py  video.py
mpfmc/commands/: imc.py  mc.py
mpfmc/config_collections/: animation.py  playlist.py  slide.py  sound_loop_set.py  text_styles.py  widget.py  widget_styles.py
mpfmc/config_players/: display_light_player.py  playlist_player.py  slide_player.py  sound_loop_player.py  sound_player.py  track_player.py  widget_player.py
mpfmc/core/: assets.py  bcp_config_player.py  bcp_processor.py  bcp_server.py  config_collection.py  config_processor.py  custom_code.py  device.py  dmd.py  keyboard.py  mc.py  mc_config_player.py  mc_custom_code.py  mc_placeholder_manager.py  mc_settings_controller.py  mode.py  mode_controller.py  physical_dmd.py  scriptlet.py  utils.py
mpfmc/devices/: slide.py  widget.py
mpfmc/effects/: color_dmd.py  colorize.py  dmd.py  dot_filter.py  flip_vertical.py  gain.py  gamma.py  glow.py  linear_gradient.py  monochrome.py  reduce.py
mpfmc/fonts/: font licenses.txt
mpfmc/integration/: DISABLED_test_CustomCode.py  test_Audio.py  test_BasicGame.py  test_CustomCode.py  test_Dmd.py  test_HighScoreMode.py  test_SegmentDisplayEmulator.py  test_Service.py  test_Sound.py  test_Video.py  test_WidgetsAndSlides.py
mpfmc/tests/: DISABLED_test_AnimatedImages.py  DISABLED_test_Video.py  FullMpfMachineTestCase.py  MpfIntegrationTestCase.py  MpfMcTestCase.py  MpfSlideTestCase.py  README.md  _test_Template.py  test_AnimatedImages.py  test_Animation.py  test_Assets.py  test_Audio.py  test_AudioBadBufferSetting.py  test_AudioDefaultSettings.py  test_AudioDisabled.py  test_AudioPlaylist.py  test_AudioSoundLoop.py  test_Audio_GStreamer.py  test_BcpProcessor.py  test_BitmapFonts.py  test_Color.py  test_ColorDmd.py  test_Display.py  test_DisplayMultiple.py  test_DisplayNone.py  test_DisplaySingle.py  test_Dmd.py  test_Fonts.py  test_Image.py  test_Keyboard.py  test_Modes.py  test_MpfPluginConfigPlayerValidation.py  test_SegmentDisplayEmulatorWidget.py  test_Service.py  test_Shapes.py  test_SlideFrame.py  test_SlidePlayer.py  test_Slides.py  test_Text.py  test_TextInput.py  (+7 more)
mpfmc/transitions/: move_in.py  move_out.py  push.py
mpfmc/uix/: display.py  effects.py  label_bitmap_font.py  relative_animation.py  slide.py  slide_frame.py  transitions.py  widget.py  widget_container.py  widget_magic_events.py  widget_wrapper.py  window.py
mpfmc/widgets/: bezier.py  camera.py  character_picker.py  display.py  dmd.py  effect_widget.py  ellipse.py  entered_chars.py  image.py  line.py  point.py  quad.py  rectangle.py  segment_display_emulator.py  text.py  text_input.py  triangle.py  video.py
scripts/: build-mac-arm64.sh
tests/: MpfMcTestCase.py  _test_Template.py  _test_mc.py  test_AnimatedImages.py  test_Animation.py  test_Assets.py  test_Audio.py  test_AudioBadBufferSetting.py  test_AudioDefaultSettings.py  test_AudioDisabled.py  test_BcpProcessor.py  test_Color.py  test_ColorDmd.py  test_DisplayMultiple.py  test_DisplayNone.py  test_DisplaySingle.py  test_Dmd.py  test_Image.py  test_Keyboard.py  test_Modes.py  test_MpfDisplay.py  test_MpfDisplayMultiple.py  test_MpfDisplaySingle.py  test_Screens.py  test_Shapes.py  test_SlideFrame.py  test_SlidePlayer.py  test_Slides.py  test_SoundController.py  test_Text.py  test_TextStyles.py  test_Transitions.py  test_Utils.py  test_Video.py  test_Widget.py  test_examples_demo.py  test_mc.py
(+187 files in other folders)
